<!--
* Description : Sign up page
* Author      : Nibin Salim
* Date        : 06/09/2015
* Reviewed by :
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <!--title area with grey background-->

            <RelativeLayout

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/rl_title">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:src="@mipmap/ic_launcher"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <ProgressBar
                    android:id="@+id/pb_progressSignUp"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:indeterminate="false"
                    android:visibility="invisible" />

            </RelativeLayout>

            <!--edittext area for entering user details-->

            <TextView
                android:id="@+id/tv_signUp"

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_below="@+id/rl_title"
                android:text="@string/tv_sign_up"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:textStyle="bold"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_signUp">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_firstName"
                    android:layout_below="@+id/tv_signUp"
                    android:hint="@string/et_hint_firstname"
                    android:maxLength="50"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="left"
                    android:background="@drawable/signin_edittext"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:inputType="textCapSentences|textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_firstname">

                <EditText
                    android:id="@+id/et_lastName"

                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/et_firstName"
                    android:hint="@string/et_hint_lastName"

                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="left"
                    android:background="@drawable/signin_edittext"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:maxLength="50"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:inputType="textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_lastname">
                <EditText
                    android:id="@+id/et_email"

                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/et_lastName"

                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/et_hint_email"
                    android:gravity="left"
                    android:background="@drawable/signin_edittext"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_pswrd_container"
                android:layout_below="@+id/input_layout_email">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/et_hint_password"

                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="left"
                        android:background="@drawable/signin_edittext"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:inputType="textPassword"
                        android:password="true"
                        android:textStyle="normal"/>
                </android.support.design.widget.TextInputLayout>
                <!--error msg for pswrd-->
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/tv_pswrd_valid"
                    android:visibility="gone"
                    android:layout_below="@id/input_layout_password"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_checkBoxContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_pswrd_container"
                android:layout_alignLeft="@+id/btn_join"
                android:layout_alignStart="@+id/btn_join"
                android:layout_alignRight="@+id/btn_join"
                android:layout_alignEnd="@+id/btn_join">


            <CheckBox
                android:id="@+id/cb_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerVertical="true"
                android:checked="false"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/cb_agree"/>
            </RelativeLayout>
            <Button
                android:id="@+id/btn_join"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/rl_checkBoxContainer"
                android:layout_marginTop="15dp"
                android:text="@string/btn_join"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:background="@drawable/signin_btn"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"/>

            <TextView

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/btn_join"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/slide_to_join"
                android:gravity="center"/>
        </RelativeLayout>

    </ScrollView>

</LinearLayout>
