<!--
* Description : Sign in page
* Author      : Nibin Salim
* Date        : 06/10/2015
* Reviewed by :
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <!--top tri color bar-->
            <!--title area with grey background-->

            <LinearLayout
                android:id="@+id/rl_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:id="@+id/rl_blueBackground"
                        android:layout_height="wrap_content"
                        android:paddingBottom="30dp"
                        android:layout_gravity="center_horizontal"
                        android:visibility="visible">
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_signInTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:paddingBottom="40dp"
                        android:paddingTop="40dp"
                        android:visibility="visible">

                        <ImageView
                            android:id="@+id/iv_logo"
                            android:src="@mipmap/ic_launcher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                </RelativeLayout>
            </LinearLayout>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_signIn"
                android:layout_below="@+id/rl_title"
                android:text="@string/tv_sign_in"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center_horizontal" />

            <!--edittext area for entering user details-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_email"
                    android:layout_below="@+id/tv_signIn"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/et_hint_email"
                    android:gravity="left"
                    android:background="@drawable/signin_edittext"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_password"
                    android:layout_below="@+id/et_email"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="left"
                    android:background="@drawable/signin_edittext"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:hint="@string/et_hint_password"
                    android:inputType="textPassword"
                    android:password="true"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_signIn"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:background="@drawable/signin_btn"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/cb_agree"
                android:layout_marginTop="15dp"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_forgotPassword"
                android:layout_below="@+id/btn_signIn"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:text="forgot password"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text=">Slide to Join"
                android:gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_progressSignIn"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="false"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/scrollView"
        android:layout_centerHorizontal="true" />

</LinearLayout>

